ultraEdit Webpage Complete
Left to work on Responsiveness

--- a/Projects/Excersise/Ultraedit Navbar clone/index.html
+++ b/Projects/Excersise/Ultraedit Navbar clone/index.html
@@ -54,36 +54,49 @@
             </div>
             <div class="cards2">
                 <div class="items">
-                    <p>
-                        ENGLISH
-                        <br>
-                    </p>
-
-                    <p class="border">DOWNLOAD 64-bit</p>
+                    <div class="itemlang">English</div>
+                    <button class="button green">Download 64 bit</button>
                 </div>
-                <div class="items">Deutsch</div>
-                <div class="items">Italiano</div>
-            </div>
-            <div class="cards3">
                 <div class="items">
-                    <p>
-                        ENGLISH
-                        <br>
-                    </p>
-
-                    <p class="border">DOWNLOAD 64-bit</p>
+                    <div class="itemlang">English</div>
+                    <button class="button green">Download 64 bit</button>
                 </div>
-                <div class="items">Deutsch</div>
-                <div class="items">Italiano</div>
+                <div class="items">
+                    <div class="itemlang">English</div>
+                    <button class="button green">Download 64 bit</button>
+                </div>
+                <div class="items">
+                    <div class="itemlang">English</div>
+                    <button class="button green">Download 64 bit</button>
+                </div>
+                <div class="items">
+                    <div class="itemlang">English</div>
+                    <button class="button green">Download 64 bit</button>
+                </div>
+                <div class="items">
+                    <div class="itemlang">English</div>
+                    <button class="button green">Download 64 bit</button>
+                </div>
+                <div class="items">
+                    <div class="itemlang">English</div>
+                    <button class="button green">Download 64 bit</button>
+                </div>
+                <div class="items">
+                    <div class="itemlang">English</div>
+                    <button class="button green">Download 64 bit</button>
+                </div>
+                <div class="items">
+                    <div class="itemlang">English</div>
+                    <button class="button green">Download 64 bit</button>
+                </div>
+                <div class="items">
+                    <div class="itemlang">English</div>
+                    <button class="button green">Download 64 bit</button>
+                </div>
+
             </div>
-        
-        <div class="cards4">
-            <div class="items"></div>
-            <div class="items"></div>
-            <div class="items"></div>
         </div>
         </div>
-    </div>
     </main>
 
 </body>
